samples/grammar.txt
Program     ::= StatementList EOF

Statements  ::= Statement
              | Statements Statement

Statement   ::= Const
              | TypeDef
              | Entity

Const       ::= Annotations "const"  Identifier "=" String ";"

TypeDef     ::= Annotations "type"   Identifier DataType ";"

Entity      ::= Annotations "entity" Identifier "{" Field* "}"

Field       ::= Annotations DataType Identifier ";"
              | Annotations DataType Identifier "=" Value ";"

DataType    ::= BaseType
              | Identifier

BaseType    ::= "int"
              | "string"
              | "date"
              | "text"
              | "decimal"
              | "float"

Annotations ::= Annotation
              | Annotations Statement

Annotation  ::= "@" ClassName
              | "@" ClassName "(" Attributes ")"

Attributes  ::= (Value | Identifier "=" Value)? ("," Identifier "=" Value)*
Value       ::= Number | String
Identifier  ::= [a-zA-Z][a-zA-Z0-9_]*
ClassName   ::= [a-zA-Z][a-zA-Z0-9_\]*

Number      ::= "-"? Digit* ("." Digit*)?
Digit       ::= [0-9]
String      ::= "..."
Comment     := // ... EOF
             | /* ... */
